--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./mystyle.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Real Estate</h1>
+        <nav>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </nav>
+        <p>We sell luxury houses, condominiums and panthouses</p>
+    </header>
+    <main>
+        <h2>More about us</h2>
+        <div>
+            <img src="./img/icon1.svg" alt="">
+            <h3>Security</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi necessitatibus tempore iusto labore a nulla, culpa fugiat consequatur repellat deserunt minus veniam laudantium assumenda voluptatum, omnis odio beatae non obcaecati?</p>
+        </div>
+        
+    </main>
 </body>
 </html>
