--- a/index.html
+++ b/index.html
@@ -7,23 +7,72 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Real Estate</h1>
-        <nav>
-            <a href="#">About</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-        </nav>
-        <p>We sell luxury houses, condominiums and panthouses</p>
-    </header>
-    <main>
-        <h2>More about us</h2>
-        <div>
-            <img src="./img/icon1.svg" alt="">
-            <h3>Security</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi necessitatibus tempore iusto labore a nulla, culpa fugiat consequatur repellat deserunt minus veniam laudantium assumenda voluptatum, omnis odio beatae non obcaecati?</p>
+    <header class="site-header">
+        <div class="container">
+            <div class="bar-menu">
+                <h1>Real Estate</h1>
+                <nav class="menu">
+                    <a href="#">About</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>
+            <p>We sell luxury houses, condominiums and panthouses</p>
         </div>
-        
+    </header>
+    <main class="container">
+        <h2>More about us</h2>
+        <div class="about-container">
+            <div class="about-item">
+                <img src="./img/icon1.svg" alt="">
+                <h3>Security</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi necessitatibus tempore iusto labore a nulla, culpa fugiat consequatur repellat deserunt minus veniam laudantium assumenda voluptatum, omnis odio beatae non obcaecati?</p>
+            </div>
+            <div class="about-item">
+                <img src="./img/icon2.svg" alt="">
+                <h3>Price</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi necessitatibus tempore iusto labore a nulla, culpa fugiat consequatur repellat deserunt minus veniam laudantium assumenda voluptatum, omnis odio beatae non obcaecati?</p>
+            </div>
+            <div class="about-item">
+                <img src="./img/icon3.svg" alt="">
+                <h3>Time</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi necessitatibus tempore iusto labore a nulla, culpa fugiat consequatur repellat deserunt minus veniam laudantium assumenda voluptatum, omnis odio beatae non obcaecati?</p>
+            </div>
+        </div>
+        <section>
+            <h2>Houses and Penthouses</h2>
+            <div class="houses-container">
+                <div class="houses-item">
+                    <img src="./img/announcement1.jpg" alt="">
+                    <div class="houses-item-text">
+                        <h3>Luxury house on the lake</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti amet provident nesciunt officia nisi optio.</p>
+                        <p class="price">$ 3,000,000.00</p>
+                        <ul class="icons-list">
+                            <li class="icon-container">
+                                <img src="/img/icon_wc.svg" alt="">
+                                <p>3</p>
+                            </li>
+                            <li class="icon-container">
+                                <img src="./img/icon_room.svg" alt="">
+                                <p>4</p>
+                            </li>
+                            <li class="icon-container">
+                                <img src="./img/icon_parking.svg" alt="">
+                                <p>3</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="btn">See details</a>
+                    </div>
+                </div>
+                <div>
+                    <!-- another house-->
+                </div>
+                <div>
+                    <!-- another house-->
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
