--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <nav class="menu">
                     <a href="#">About</a>
                     <a href="#">Blog</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </nav>
             </div>
             <p>We sell luxury houses, condominiums and panthouses</p>
@@ -43,7 +43,9 @@
             <h2>Houses and Penthouses</h2>
             <div class="houses-container">
                 <div class="houses-item">
-                    <img src="./img/announcement1.jpg" alt="">
+                    <div class="houses-item-img">
+                        <img src="./img/announcement1.jpg" alt="">
+                    </div>
                     <div class="houses-item-text">
                         <h3>Luxury house on the lake</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti amet provident nesciunt officia nisi optio.</p>
@@ -65,11 +67,57 @@
                         <a href="#" class="btn">See details</a>
                     </div>
                 </div>
-                <div>
-                    <!-- another house-->
+            <div class="houses-container">
+                <div class="houses-item">
+                    <div class="houses-item-img">
+                        <img src="./img/announcement2.jpg" alt="">
+                    </div>
+                    <div class="houses-item-text">
+                        <h3>Luxury house on the lake</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti amet provident nesciunt officia nisi optio.</p>
+                        <p class="price">$ 3,000,000.00</p>
+                        <ul class="icons-list">
+                            <li class="icon-container">
+                                <img src="/img/icon_wc.svg" alt="">
+                                <p>3</p>
+                            </li>
+                            <li class="icon-container">
+                                <img src="./img/icon_room.svg" alt="">
+                                <p>4</p>
+                            </li>
+                            <li class="icon-container">
+                                <img src="./img/icon_parking.svg" alt="">
+                                <p>3</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="btn">See details</a>
+                    </div>
                 </div>
-                <div>
-                    <!-- another house-->
+            <div class="houses-container">
+                <div class="houses-item">
+                    <div class="houses-item-img">
+                        <img src="./img/announcement3.jpg" alt="">
+                    </div>
+                    <div class="houses-item-text">
+                        <h3>Luxury house on the lake</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti amet provident nesciunt officia nisi optio.</p>
+                        <p class="price">$ 3,000,000.00</p>
+                        <ul class="icons-list">
+                            <li class="icon-container">
+                                <img src="/img/icon_wc.svg" alt="">
+                                <p>3</p>
+                            </li>
+                            <li class="icon-container">
+                                <img src="./img/icon_room.svg" alt="">
+                                <p>4</p>
+                            </li>
+                            <li class="icon-container">
+                                <img src="./img/icon_parking.svg" alt="">
+                                <p>3</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="btn">See details</a>
+                    </div>
                 </div>
             </div>
         </section>
